BAEL-9234: fix tests